# makeup

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: audit.yaml  cli-functionality.yaml  clippy.yaml  docs.yaml  tests.yaml
makeup/: Cargo.toml
makeup-ansi/: Cargo.toml  README.md
makeup-ansi/src/: lib.rs
makeup-console/: Cargo.toml  README.md
makeup-console/src/: lib.rs
makeup-macros/: Cargo.toml
makeup-macros/src/: lib.rs
makeup/examples/: container.rs  container_input.rs  external_message.rs  fps.rs  hello.rs  input.rs  spinner.rs  wave.rs
makeup/src/: component.rs  lib.rs  post_office.rs  test.rs  ui.rs  util.rs
makeup/src/components/: container.rs  echo_text.rs  fps.rs  mod.rs  positioned_text.rs  spinner.rs  text_input.rs
makeup/src/input/: mod.rs  terminal.rs
makeup/src/render/: memory.rs  mod.rs  terminal.rs
makeup/src/test/: diff.rs  mod.rs
