[package]
name = "makeup-console"
description = "Console helper library for makeup"
repository = "https://github.com/queer/makeup"
license = "MIT"
version = "0.0.4"
edition = "2021"
categories = ["command-line-interface"]
keywords = ["console"]

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
eyre = "0.6.8"
nix = "0.26.2"
libc = "0.2.147"
async-recursion = "1.0.4"
thiserror = "1.0.46"

[dependencies.makeup-ansi]
path = "../makeup-ansi"
version = "0.0.2"
