[package]
name = "makeup-console"
description = "Console helper library for makeup"
repository = "https://github.com/queer/makeup"
license = "MIT"
version = "0.0.7"
edition = "2021"
categories = ["command-line-interface"]
keywords = ["console"]

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
eyre = "0.6.11"
nix = { version = "0.27.1", features = ["poll", "signal", "term", "fs"] }
libc = "0.2.151"
async-recursion = "1.0.5"
thiserror = "1.0.53"

[dependencies.makeup-ansi]
path = "../makeup-ansi"
version = "0.0.3"
