[package]
name = "makeup-macros"
version = "0.0.1"
edition = "2021"
description = "Macro helper library for makeup"
repository = "https://github.com/queer/makeup"
license = "MIT"
readme = "../README.md"
keywords = ["cli"]
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.67"
quote = "1.0.33"
syn = { version = "2.0.38", features = ["full"] }

[lib]
proc-macro = true
