[package]
name = "makeup-macros"
version = "0.0.2"
edition = "2021"
description = "Macro helper library for makeup"
repository = "https://github.com/queer/makeup"
license = "MIT"
readme = "../README.md"
keywords = ["cli"]
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.34"
syn = { version = "2.0.52", features = ["full"] }

[lib]
proc-macro = true
