[package]
name = "makeup"
description = "Stylish CLIs/TUIs for Rust!"
repository = "https://github.com/queer/makeup"
license = "MIT"
version = "0.0.4"
edition = "2021"
readme = "../README.md"
categories = ["command-line-interface", "rendering", "rendering::engine"]
keywords = ["cli", "tui", "terminal", "color", "60fps"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.4"
async-trait = "0.1.71"
either = "1.8.1"
eyre = "0.6.8"
futures-util = "0.3.28"
rand = "0.8.5"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
libc = "0.2.147"
indoc = "2.0.3"
strum = { version = "0.25.0", features = ["derive"] }

[dev-dependencies]
colorgrad = "0.6.2"

[dependencies.makeup-ansi]
path = "../makeup-ansi"
version = "0.0.2"

[dependencies.makeup-console]
path = "../makeup-console"
version = "0.0.3"

[dependencies.makeup-macros]
path = "../makeup-macros"
version = "0.0.1"
