[package]
name = "makeup"
description = "Stylish CLIs/TUIs for Rust!"
repository = "https://github.com/queer/makeup"
license = "MIT"
version = "0.0.6"
edition = "2021"
readme = "../README.md"
categories = ["command-line-interface", "rendering", "rendering::engine"]
keywords = ["cli", "tui", "terminal", "color", "60fps"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
async-trait = "0.1.74"
either = "1.9.0"
eyre = "0.6.11"
futures-util = "0.3.29"
rand = "0.8.5"
thiserror = "1.0.51"
tokio = { version = "1.35.0", features = ["full"] }
libc = "0.2.151"
indoc = "2.0.4"
strum = { version = "0.25.0", features = ["derive"] }
taffy = "0.3.18"
derivative = "2.2.0"

[dev-dependencies]
colorgrad = "0.6.2"

[dependencies.makeup-ansi]
path = "../makeup-ansi"
version = "0.0.2"

[dependencies.makeup-console]
path = "../makeup-console"
version = "0.0.5"

[dependencies.makeup-macros]
path = "../makeup-macros"
version = "0.0.1"
