[package]
name = "makeup"
description = "Stylish CLIs/TUIs for Rust!"
repository = "https://github.com/queer/makeup"
license = "MIT"
version = "0.0.8"
edition = "2021"
readme = "../README.md"
categories = ["command-line-interface", "rendering", "rendering::engine"]
keywords = ["cli", "tui", "terminal", "color", "60fps"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
async-trait = "0.1.77"
either = "1.9.0"
eyre = "0.6.12"
futures-util = "0.3.30"
rand = "0.8.5"
thiserror = "1.0.56"
tokio = { version = "1.36.0", features = ["full", "tracing"] }
libc = "0.2.153"
indoc = "2.0.4"
strum = { version = "0.26.1", features = ["derive"] }
taffy = "0.3.18"
derivative = "2.2.0"

[dev-dependencies]
colorgrad = "0.6.2"

[dependencies.makeup-ansi]
path = "../makeup-ansi"
version = "0.0.3"

[dependencies.makeup-console]
path = "../makeup-console"
version = "0.0.7"

[dependencies.makeup-macros]
path = "../makeup-macros"
version = "0.0.2"
